--- a/members/templates/Channel/completedchannel.html
+++ b/members/templates/Channel/completedchannel.html
@@ -198,14 +198,14 @@ $(document).ready(function() {
       
       <a href="{% url 'funding_now' %}" class="fuck" style="color: black;"> Discover <i class="fa fa-search" style="rotate: 90deg;"></i></a> 
       <a href="{% url 'loda' %}" style="color: black;" class="fuck">How it Works<i class="fas fa-book" style="margin-left: 10px;"></i></a>
-      {% if user.is_authenticated %}
+      {% if request.user.is_authenticated %}
       <a href="{% url 'logout'%}"  class="fuck" style="color: black;">Log Out <i class="fas fa-face-sad-tear" style="margin-left: 10px;"></i></a>
       {% else %}
        <a href="{% url 'login_user' %}"  class="fuck" style="color: black;">Login <i class="fas fa-user" style="margin-left: 10px;"></i></a>
        {% endif %}
      <div style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
     <a href="{% url 'funding_info' %}"> <button class="donate-btn-burger" style="color: azure; font-weight: bold;"> Start a Project</button></a>
-    {% if user.is_authenticated %}
+    {% if request.user.is_authenticated %}
     <a href="{% url 'donation_history' %}"> <button class="sign-btn-burger">Donation History</button></a>
     {% else %}
     <a href="{% url 'register_user' %}"> <button class="sign-btn-burger">Sign up</button></a>
