--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -218,7 +218,7 @@ h1 {
 body{
 margin: 0;
 padding: 0;
-background-image: url('samiksha.jpeg');
+background-image: url('Samikshasketch.png');
 background-repeat: no-repeat;
 background-size: 100% 100%;
 background-position: center center;
@@ -473,7 +473,7 @@ background-attachment: fixed;
     background-image: none;
   }
   body{
-    background-image: url('samiksha.jpeg');
+
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
@@ -531,7 +531,7 @@ background-attachment: fixed;
 }
 @media(max-width:465px){
   body{
-    background-image: url('samiksha.jpeg');
+
     background-repeat: no-repeat;
     background-size: 100% 100%;
 
