--- a/members/templates/Channel/userchannel.html
+++ b/members/templates/Channel/userchannel.html
@@ -644,7 +644,7 @@ $(document).ready(function() {
             
           </div>
           <p class="pforfundinggoal-phone" style="color: black; margin-top: 0.4em; margin-bottom: 0.6em;">{{completed_donation_count}} people donated</p>
-          <button class="sexysex-button-phone donate-button" style="margin-bottom: 10px;" ><a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate </a></button>
+          <a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff;"> <button class="sexysex-button-phone donate-button" style="margin-bottom: 10px;" ><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate</button></a>
           <button class="sexysex-button-phone share-button" onclick="openPopup()"><i class="fas fa-share"></i> Share</button>
           <!--  phone menu share button  -->
               <div class="popup" id="popup">
@@ -875,7 +875,7 @@ $(document).ready(function() {
             {% endfor %}
         </div>
             <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
-            <button class="sexysex-button-phone donate-button" style="margin-top: 30px; width: 90%;"><a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff; padding: 20px;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate </a></button>
+              <a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff; padding: 20px;"><button class="sexysex-button-phone donate-button" style="margin-top: 30px; width: 90%;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate</button></a>
             </div>
           </div>
 
@@ -1091,9 +1091,9 @@ $(document).ready(function() {
     </div>
 
 
-                <button class="sexysex-button donate-button" ><a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff;">
-                <i class="fas fa-donate" style="margin-right: 5px;"></i> Donate </a>
-                </button>
+           <a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff;"> <button class="sexysex-button donate-button" >
+                <i class="fas fa-donate" style="margin-right: 5px;"></i> Donate 
+                </button></a>
                 <div class="donation-info">
                 <p class="donation-text">{{completed_donation_count}} people donated</p>
                 </div>
@@ -1217,7 +1217,7 @@ $(document).ready(function() {
                     {% endif %}
                     {% endfor %}
                 </div>
-                    <button class="sexysex-button-phone donate-button" style="margin-top: 25px;"><a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate </a></button>
+                <a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff;"><button class="sexysex-button-phone donate-button" style="margin-top: 25px;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate</button></a>
                     </div>
             </div>
             </div>
