share and see all button on updates page

--- a/members/templates/Channel/userchannel.html
+++ b/members/templates/Channel/userchannel.html
@@ -875,7 +875,7 @@ $(document).ready(function() {
             {% endfor %}
         </div>
             <div style="display: flex; flex-direction: row; align-items: center; justify-content: center;">
-              <a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff; padding: 20px;"><button class="sexysex-button-phone donate-button" style="margin-top: 30px; width: 90%;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate</button></a>
+              <a href="{% url 'donation_landing_page' project_id=project.id %}" style="text-decoration: none; color: #ffffff; padding: 20px;"><button class="sexysex-button-phone donate-button" style="margin-top: 30px; width: 90vw;"><i class="fas fa-donate" style="margin-right: 5px;"></i> Donate</button></a>
             </div>
           </div>
 
