--- a/ourtubehome/templates/index.html
+++ b/ourtubehome/templates/index.html
@@ -122,9 +122,9 @@
 
 </header>
 <body>
- <div style="margin: 0; padding: 0; display: flex; flex-direction: column; gap: 10px; align-items: center;">
+ <div class="overall">
    
-  <h1 class="cool-transition">Empowering content creators</h1>
+  <h1 class="cool-transition">Empowering communities</h1>
   <h1 class="cool-transition">to change lives</h1>
   <a href="{% url 'funding_info' %}">
     <button class="donate-btn-btn" style="margin-top: 2.2em;">Start a project</button>
