--- a/members/static/styleindex.css
+++ b/members/static/styleindex.css
@@ -104,16 +104,13 @@ li:hover{
 .donate-btn-btn{
 
         background-color: #28a745;
-    
+        margin-top: 2.2em;
         border-radius: 50px;
         border: none;
         transition: background-color 0.3s ease;
         cursor: pointer;
         color: #fff;
         width: 15rem; height: 3.5rem; text-align: center; font-size: larger; font-weight: bold;
-        animation-name: ButtonTransition;
-        animation-duration: 1.5s;
-        animation-timing-function: ease-in-out;
       
 }
 
@@ -182,40 +179,25 @@ h1 {
   font-weight: 600;
   color: #f1f1f1;
   margin-bottom: 0em;
-  animation-name: coolTransition;
-  animation-duration: 1.5s;
-  animation-timing-function: ease-in-out;
-
 }
 .overall{
-  margin: 0; padding: 0; display: flex; flex-direction: column; gap: 10px; align-items: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 90%;
+  margin: 0; padding: 0; display: flex; flex-direction: column; gap: 10px; align-items: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 90%;animation: coolTransition 1s ease-in-out;
 }
 @keyframes coolTransition {
   0% {
     opacity: 0;
-    transform: translateY(-20px);
-    z-index: 1;
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-    z-index: 1;
-  }
-}
-@keyframes ButtonTransition {
-  0% {
-    opacity: 0;
-    z-index: 1;
-    
-  }
-  100% {
-    opacity: 1;
-    z-index: 1;
   
+
+  }
+  100% {
+    opacity: 1;
+
   }
 }
 
-
+.hidden{
+  display: none;
+}
 
 
 
