--- a/members/templates/Channel/userchannel.html
+++ b/members/templates/Channel/userchannel.html
@@ -411,8 +411,8 @@ $(document).ready(function() {
 
         {% if request.user.id == user.id %}
         
-          <div style="display: flex; flex-direction: column; align-items: center; position: absolute; top: 50vh; width: 100%; justify-content: center;">
-            <p class="sponge"> You have no ongoing projects. </p>
+          <div style="display: flex; flex-direction: column; align-items: center; padding-top: 50px; width: 100%; justify-content: center;">
+            <p class="sponge" style="text-align: center;"> You have no ongoing projects. </p>
             
              <a href="{% url 'funding_info' %}"><button class="donate-btn-btn">Start a project</button></a>
             </div>
