--- a/members/templates/projects/payments.html
+++ b/members/templates/projects/payments.html
@@ -96,7 +96,7 @@
 <body>
     
     <div style=" display: flex; flex-direction: column; align-items: center;">
-    <h2  class="heding">Verify your details and link a bank account</h2>
+    <h2  class="heding" style="text-align: center;">Verify your details and link a bank account</h2>
     <h3  class="beding" style="width: 70%; text-align: center; color: gray; font-weight: 300;">Confirm who’s raising funds and receiving them if this project reaches its funding goal. Double-check your information—you agree the details you provide are true to your fullest knowledge.</h3>
     </div>
     
@@ -108,7 +108,7 @@
     <div class="column">
       <h2 class="headingstyle">Contact Email</h2>
       <p class="estyle">Confirm the email address that will be used to receive payments via PayPal. It should correspond to either a personal or checking account with PayPal.</p>
-      <p class="estyle">If the incorrect email is shown here, update it on your account.</p>
+      <p class="estyle">If the incorrect email is shown here, <a href="{% url 'basic_info' %}" style="text-decoration: underline; color: gray;">update it on your account.</a></p>
     </div>
     {% if project.verification_status == 'not_verified' %}
             <div class="kuntainer" style="position: relative; top: 65px;">
@@ -139,7 +139,7 @@
     <h2 class="headingstyle">Contact Email</h2>
     <div style="display: flex; flex-direction: column;">
     <p class="pstyle" style="margin-bottom: 0;">Confirm the email address we should use for correspondence about this project.</p>
-    <p class="pstyle" style="margin-top: 0;">If the incorrect email is shown here, <a href="{%url 'channel_customization'%}" style="color: gray;">update it on your account.</a></p>
+    <p class="pstyle" style="margin-top: 0;">If the incorrect email is shown here, <a href="{%url 'basic_info'%}">update it on your account.</a></p>
     </div>
 
     {% if project.verification_status == 'not_verified' %}
